--- a/src/components/widgets/Announcement.astro
+++ b/src/components/widgets/Announcement.astro
@@ -10,14 +10,14 @@
     >NEW</span
   >
   <a href="https://astro.build/blog/astro-5/" class="text-muted hover:underline dark:text-slate-400 font-medium"
-    >Astro v5.0.0 is now available! »</a
+    >เว็บไซต์คริสตจักรเมล็ดพันธุ์กรุงเทพ v2 ทำด้วย Astro v5.0.0</a
   >
   <a
     target="_blank"
     rel="noopener"
-    class="ltr:ml-auto rtl:mr-auto w-[5.6rem] h-[1.25rem] ml-auto bg-contain inline-block bg-[url(https://img.shields.io/github/stars/onwidget/astrowind.svg?style=social&label=Stars&maxAge=86400)]"
-    title="If you like AstroWind, give us a star."
-    href="https://github.com/onwidget/astrowind"
+    class="ltr:ml-auto rtl:mr-auto w-[5.6rem] h-[1.25rem] ml-auto bg-contain inline-block bg-[url(https://img.shields.io/github/stars/onwidget/astrowind.svg?style=social&label=Stars&maxAge= )]"
+    title="If you like SeedChBKK, give us a star."
+    href="https://github.com/seedbkkchurch/seedbkk-landing-astro.git"
   >
   </a>
 </div>
