refactor(navigation): update header and footer
- Removed unused navigation links
- Added new lesson links to header
- Updated footer copyright information
- Simplified navigation structure
- Removed several unused links

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -526,10 +526,10 @@ const metadata = {
 
     <Stats
     stats={[
-      { title: 'Downloads', amount: '132K' },
-      { title: 'Stars', amount: '24.8K' },
-      { title: 'Forks', amount: '10.3K' },
-      { title: 'Users', amount: '48.4K' },
+      { title: 'Member', amount: '30 people' },
+      { title: 'Age', amount: '23.5 year' },
+      { title: 'Age Chruch', amount: '2 year' },
+      // { title: 'Users', amount: '48.4K' },
     ]}
   />
 </Layout>
