refactor(logo): update logo image and path
- Replaced SEED_CHURCH_LOGO.webp with SEED_CHURCH_LOGO.png
- Updated image path in Logo.astro component
- Updated image path in navigation.ts
- Updated image in index.astro
- Added new icons directory in public

--- a/src/components/Logo.astro
+++ b/src/components/Logo.astro
@@ -3,8 +3,11 @@ import { SITE } from 'astrowind:config'
 ---
 
 <img
-  src="../assets/favicons//SEED_CHURCH_LOGO.webp"
-  class="ml-2 self-center whitespace-nowrap text-2xl font-bold text-gray-900 dark:text-white md:text-xl rtl:ml-0 rtl:mr-2"
+  src="/icons/SEED_CHURCH_LOGO.png"
+  class="ml-2 self-center whitespace-nowrap text-2xl font-bold  text-gray-900 dark:text-white md:text-xl rtl:ml-0 rtl:mr-2"
   alt="SeedChruch logo"
-/>
-{SITE?.name}
+  width="50"
+  height="50"
+>
+ {SITE?.name}
+</img>
