chore(pages): update homepage and other pages
- Removed unused navigation links
- Updated pastor section hero image
- Added contact info widget to homepage
- Updated homepage stats and hero image
- Removed unused steps2 widget from give page

--- a/src/pages/homes/pastor.astro
+++ b/src/pages/homes/pastor.astro
@@ -43,14 +43,15 @@ const metadata = {
 
   <Hero
     id="hero"
-    title="Sarah Johnson"
+    title="Prapan Meepiankij"
     tagline="ศิยาภิบาลคริสตเมล็ดพันธุ์"
     actions={[{ variant: 'primary', text: 'Hire me', href: getPermalink('/contact#form') }]}
   >
     <Fragment slot="subtitle">
-      I'm a Graphic Designer passionate about crafting visual stories. <br /> With 5 years of experience and a degree from
-      New York University's School of Design. I infuse vitality into brands and designs, transforming concepts into captivating
-      realities.
+      
+        สวัสดีครับ ยินดีต้อนรับทุกท่านที่เข้ามาเยี่ยมชมของพี่ประพันธ์ มีเพียรกิจ ศิยาภิบาลคริสตเมล็ดพันธุ์
+
+      
     </Fragment>
   </Hero>
 
@@ -86,7 +87,7 @@ const metadata = {
       },
     ]}
     image={{
-      src: 'https://images.unsplash.com/photo-1491349174775-aaafddd81942?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D&auto=format&fit=crop&w=774&q=80',
+      src: '~/assets/images/pastor.jpg',
       alt: 'Colorful Image',
       loading: 'eager',
     }}
