--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -38,6 +38,9 @@ const { language, textDirection } = I18N
 
     <!-- Comment the line below to disable View Transitions -->
     <ClientRouter fallback="swap" />
+    <link href="https://cdn.jsdelivr.net/npm/pagedone@1.2.2/src/css/pagedone.css " rel="stylesheet"/>
+    <script src="https://cdn.jsdelivr.net/npm/pagedone@1.2.2/src/js/pagedone.js"></script>
+
   </head>
 
   <body class="bg-page tracking-tight text-default antialiased">
