--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -55,13 +55,10 @@ const metadata = {
       โบสที่มีวัยรุ่น 100% และ culture แบบวัยรุ่น
     </Fragment>
   </Hero>
-
+  
+ 
   <CountdownTimer client:only="react" />
-
-
-  <!-- Note Widget ******************* -->
-
-  <Note />
+  <Note quote="Note:" text="รอบนมัสการรอบถัดไป" />
 
   <!-- Features Widget *************** -->
   <Features
@@ -451,7 +448,10 @@ const metadata = {
                         Astro is a very interesting technology. Thanks.
                 `}
   />
+    
+    <!-- Note Widget ******************* -->
 
+  <Note quote="Quote:" text="คุณเปลี่ยนแปลงตัวเองไม่ได้ แต่พระเจ้าเปลี่ยนคุณได้" />
   <!-- FAQs Widget ******************* -->
 
   <FAQs
