fix: minor UI/UX improvements
- Fixed spacing issues in Footer component.
- Improved styling in Contact widget.
- Corrected formatting in Note widget.
- Updated link in Layout component.
- Minor adjustments to navigation and pages.

--- a/src/pages/contact.astro
+++ b/src/pages/contact.astro
@@ -13,8 +13,8 @@ const metadata = {
 <Layout metadata={metadata}>
   <!-- HeroText Widget ******************* -->
 
-  <HeroText tagline="Contact" title="รอบนมัสการรอบถัดไป" />
-  <CountdownTimer client:only="react"/>
+  <HeroText tagline="Contact" title="รอบนมัสการรอบถัดไป วันอาทิตย์ วันอาทิตย์ 14.00" />
+  <CountdownTimer client:only="react" />
 
   <ContactUs
     id="form"
