--- a/src/pages/homes/pastor.astro
+++ b/src/pages/homes/pastor.astro
@@ -48,8 +48,7 @@ const metadata = {
     actions={[{ variant: 'primary', text: 'Hire me', href: getPermalink('/contact#form') }]}
   >
     <Fragment slot="subtitle">
-      สวัสดีครับ ยินดีต้อนรับทุกท่านที่เข้ามาเยี่ยมชมของพี่ประพันธ์ มีเพียรกิจ ศิยาภิบาลคริสตเมล็ดพันธุ์
-    </Fragment>
+      ผู้ที่ได้รับการทรงเรียกให้รับใช้พระเจ้า และได้นำประสบการณ์กว่า 14 ปี ในด้านการตลาดมาสนับสนุนพันธกิจของคริสตจักร ด้วยความเชี่ยวชาญด้าน การสร้างแบรนด์ การสื่อสาร และการจัดอีเวนต์    </Fragment>
   </Hero>
 
   <!-- Content Widget **************** -->
@@ -92,16 +91,14 @@ const metadata = {
     <Fragment slot="content">
       <h2 class="mb-2 text-2xl font-bold tracking-tight dark:text-white sm:text-3xl">About me</h2>
       <p>
-        Welcome to my creative journey. My work is a testament to my commitment to bringing ideas to life, where each
-        pixel becomes a brushstroke in the canvas of imagination.
+        ผมเป็นคริสเตียนที่มีความเชื่อในพระเจ้า และมีความมุ่งมั่นที่จะเปลี่ยนแปลงประเทศไทยให้เป็นประเทศคริสเตียน
       </p>
       <br />
       <p>
-        I find inspiration in the world around me, whether through the pages of a captivating novel, the intricate
-        details of typography, or the vibrant hues of nature during my outdoor escapades.
+      ที่มีความเชื่อในพระเจ้า และมีความมุ่งมั่นที่จะเปลี่ยนแปลงประเทศไทยให้เป็นประเทศคริสเตียน
       </p>
       <br />
-      <p>If you're curious to dive deeper into my work, you can follow me:</p>
+      <p></p>
     </Fragment>
 
     <Fragment slot="bg">
@@ -113,17 +110,35 @@ const metadata = {
 
   <Steps
     id="resume"
-    title="ประสบการณ์รับใช้"
+    title="ประสบการณ์"
     items={[
       {
         title:
-          'Graphic Designer <br /> <span class="font-normal">ABC Design Studio, New York, NY</span> <br /> <span class="text-sm font-normal">2021 - Present</span>',
+          'ศิยาภิบาล <br /> <span class="font-normal">คริสตจักรเมล็ดพันธ์กรุงเทพ</span> <br /> <span class="text-sm font-normal">2021 - Present</span>',
         description: `Collaborate with clients to understand design requirements and objectives. <br /> Develop branding solutions, including logos, color palettes, and brand guidelines. <br /> Design marketing materials such as brochures, posters, and digital assets. <br /> Create visually appealing user interfaces for websites and applications.`,
         icon: 'tabler:briefcase',
       },
       {
         title:
-          'Junior Graphic Designer <br /> <span class="font-normal">XYZ Creative Agency, Los Angeles, CA</span> <br /> <span class="text-sm font-normal">2018 - 2021</span>',
+          'วิทยากรการตลาด <br /> <span class="font-normal">สมาคมธรุกิจคริสเตียนแห่งประเทศไทย</span> <br /> <span class="text-sm font-normal">2021 - Present</span>',
+        description: `Collaborate with clients to understand design requirements and objectives. <br /> Develop branding solutions, including logos, color palettes, and brand guidelines. <br /> Design marketing materials such as brochures, posters, and digital assets. <br /> Create visually appealing user interfaces for websites and applications.`,
+        icon: 'tabler:briefcase',
+      },
+      {
+        title:
+          'ศิยาภิบาล <br /> <span class="font-normal">คริสตจักรเมล็ดพันธ์ภูเก็ตซิตี้</span> <br /> <span class="text-sm font-normal">2018 - 2021</span>',
+        description: `Assisted senior designers in creating design concepts and visual assets. <br /> Contributed to the development of brand identities and marketing collateral. <br /> Collaborated with the marketing team to ensure consistent design across campaigns. <br /> Gained hands-on experience in various design software and tools.`,
+        icon: 'tabler:briefcase',
+      },
+      {
+        title:
+          'CEO <br /> <span class="font-normal">Inspire Marketing</span> <br /> <span class="text-sm font-normal">2018 - 2021</span>',
+        description: `Assisted senior designers in creating design concepts and visual assets. <br /> Contributed to the development of brand identities and marketing collateral. <br /> Collaborated with the marketing team to ensure consistent design across campaigns. <br /> Gained hands-on experience in various design software and tools.`,
+        icon: 'tabler:briefcase',
+      },
+      {
+        title:
+          'Onwner and Maneger Event <br /> <span class="font-normal">Mayucos</span> <br /> <span class="text-sm font-normal">2018 - 2021</span>',
         description: `Assisted senior designers in creating design concepts and visual assets. <br /> Contributed to the development of brand identities and marketing collateral. <br /> Collaborated with the marketing team to ensure consistent design across campaigns. <br /> Gained hands-on experience in various design software and tools.`,
         icon: 'tabler:briefcase',
       },
