--- a/src/pages/contact.astro
+++ b/src/pages/contact.astro
@@ -13,7 +13,7 @@ const metadata = {
 <Layout metadata={metadata}>
   <!-- HeroText Widget ******************* -->
 
-  <HeroText tagline="Contact" title="รอบนมัสการรอบถัดไป วันอาทิตย์ วันอาทิตย์ 14.00" />
+  <HeroText tagline="" title="รอบนมัสการรอบถัดไป วันอาทิตย์ 14.00" />
   <CountdownTimer client:only="react" />
 
   <ContactUs
