--- a/src/pages/homes/give.astro
+++ b/src/pages/homes/give.astro
@@ -316,7 +316,7 @@ const metadata = {
       },
       {
         title: 'เงินถวายเอาไปทำอะไร?',
-        description: `Absolutely, our dedicated customer support team is here to assist you with any questions or challenges you may encounter. Feel free to reach out to us through our support channels, and we'll be happy to provide the help you need.`,
+        description: `เงินถวายในโบสถ์ไม่ได้ถูกใช้เพื่อแสวงหากำไร แต่เป็นการให้ด้วยใจเพื่อสนับสนุนพันธกิจของโบสถ์ ช่วยเหลือสังคม และเผยแพร่ศาสนา การบริหารจัดการขึ้นอยู่กับนโยบายของแต่ละโบสถ์ บางแห่งมีการเปิดเผยรายรับรายจ่ายเพื่อให้สมาชิกมีส่วนร่วมและมั่นใจในการใช้เงินอย่างโปร่งใส การถวายไม่ใช่ภาระหน้าที่ แต่เป็นการให้ด้วยใจกับพระเจ้าและเพื่อนมนุษย์`,
         icon: 'tabler:chevrons-right',
       },
     ]}
@@ -331,7 +331,7 @@ const metadata = {
   <BlogLatestPosts
     id="blog"
     title="Stay informed with AstroWind's blog"
-    information={`Explore our collection of articles, guides, and tutorials on web development, design trends, and using AstroWind effectively for your projects.`}
+    information={``}
   >
     <Fragment slot="bg">
       <div class="absolute inset-0 bg-blue-50 dark:bg-transparent"></div>
