--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -439,10 +439,7 @@ const metadata = {
 
   <BlogLatestPosts
     title="Find out more content in our Blog"
-    information={`The blog is used to display AstroWind documentation.
-                        Each new article will be an important step that you will need to know to be an expert in creating a website using Astro + Tailwind CSS.
-                        Astro is a very interesting technology. Thanks.
-                `}
+    information={`ข่าวสาร กิจกรรม และคำสอนจากพระคัมภีร์ล่าสุด`}
   />
 
   <!-- Note Widget ******************* -->
@@ -459,32 +456,32 @@ const metadata = {
       {
         title: 'พระเยซูคือใคร  ตายบนกางเขนแล้วเกี่ยวอะไรกับฉัน?',
         description:
-          "Michael Knight a young loner on a crusade to champion the cause of the innocent. The helpless. The powerless in a world of criminals who operate above the law. Here he comes Here comes Speed Racer. He's a demon on wheels.",
+          'พระเยซูคือพระบุตรของพระเจ้า ผู้มาในโลกเพื่อช่วยมนุษย์จากบาปของตนเอง พระองค์สอนให้รักพระเจ้าและเพื่อนมนุษย์ แล้วสิ้นพระชนม์บนไม้กางเขนเพื่อชดใช้บาปแทนทุกคน แต่สามวันต่อมาพระองค์ฟื้นคืนชีพ แสดงให้เห็นว่าความตายและบาปไม่มีอำนาจเหนือพระองค์',
       },
       {
         title: 'ทุกศาสนาสอนให้เป็นคนดี แล้วทำไมต้องเชื่อพระเจ้า',
         description:
-          'Space, the final frontier. These are the voyages of the Starship Enterprise. Its five-year mission: to explore strange new worlds. Many say exploration is part of our destiny, but it’s actually our duty to future generations.',
+          'จริงที่ว่าทุกศาสนาสอนให้เป็นคนดี แต่ ศาสนาคริสต์ไม่ได้เน้นแค่การเป็นคนดี เพราะปัญหาของมนุษย์ไม่ใช่แค่ "ไม่ดีพอ" แต่คือ "บาป" ซึ่งทำให้เราขาดจากพระเจ้า ถ้าแค่เป็นคนดีพอจะทำให้รอดได้ พระเยซูไม่จำเป็นต้องมาตายบนไม้กางเขน แต่เพราะเราช่วยตัวเองไม่ได้ พระองค์จึงมอบทางรอดให้เราฟรีๆ ผ่านความเชื่อในพระองค์',
       },
       {
         title: 'พระเจ้าก็เหมือนเป็นกุศโลบายที่ทำให้เราทำความดีหรอ?',
         description:
-          "Well, the way they make shows is, they make one show. That show's called a pilot. Then they show that show to the people who make shows, and on the strength of that one show they decide if they're going to make more shows.",
+          'พระเจ้าในมุมมองของคริสต์ศาสนา ไม่ใช่แค่กุศโลบายเพื่อให้คนทำดี แต่เป็น พระผู้สร้างและเป็นแหล่งของชีวิต ความรัก และความจริง  ถ้าพระเจ้ามีอยู่จริง การทำดีไม่ใช่แค่เรื่องของศีลธรรม แต่คือ การตอบสนองต่อความรักของพระองค์ ไม่ใช่แค่ ทำดีเพราะกลัว หรือ เพราะหวังรางวัล แต่เพราะเราได้รับความรักและพระคุณจากพระเจ้าแล้ว เราจึงอยากทำดีโดยธรรมชาติ',
       },
       {
         title: 'อยู่ในสังคมคริสเตียนโดนล้างสมองหรืองมงายจริงป่าว?',
         description:
-          "A flower in my garden, a mystery in my panties. Heart attack never stopped old Big Bear. I didn't even know we were calling him Big Bear.",
+          'คนที่ไม่เคยสัมผัสความเชื่อคริสเตียนอาจมองว่าผู้เชื่อโดนล้างสมองหรืองมงาย เพราะศาสนามักถูกมองว่าเป็นเรื่องของอารมณ์ ความเชื่อแบบไร้เหตุผล หรือการถูกชักนำจากสังคม แต่ ความเชื่อในพระเจ้าไม่ได้ขัดกับเหตุผล คริสเตียนจำนวนมาก รวมถึงนักวิทยาศาสตร์ นักปรัชญา และนักคิดที่ยิ่งใหญ่ในประวัติศาสตร์ เชื่อในพระเจ้าโดยใช้เหตุผล วิเคราะห์หลักฐาน และตั้งคำถามกับสิ่งที่ตัวเองเชื่อ  ถ้าเป็นการล้างสมอง แสดงว่าห้ามตั้งคำถาม แต่คริสเตียนกลับส่งเสริมให้แสวงหาความจริง ศึกษาคำสอน และใช้เหตุผลประกอบความเชื่อ พระคัมภีร์เองก็บอกให้ รักพระเจ้าด้วยสุดจิตสุดใจ และด้วยสติปัญญาของเจ้า (มัทธิว 22:37)',
       },
       {
         title: 'ทำไมคนไปโบสเยอะจังเลย ผู้นำที่โบสได้อะไร เขาได้เงินได้กำไรหรอ?',
         description:
-          "A business big enough that it could be listed on the NASDAQ goes belly up. Disappears! It ceases to exist without me. No, you clearly don't know who you're talking to, so let me clue you in.",
+          " โบสถ์เป็นสถานที่ที่ให้มากกว่าการนมัสการพระเจ้า เพราะมันเป็นศูนย์รวมของผู้คนที่มีเป้าหมายทางจิตวิญญาณร่วมกัน คนที่ไปโบ ผู้นำโบสถ์ หรือ 'ศิษยาภิบาล'  ทำหน้าที่คล้ายผู้นำทางจิตวิญญาณ พวกเขาอาจได้รับค่าตอบแทนหรืออาจทำงานโดยไม่รับเงินเลย ขึ้นอยู่กับลักษณะของโบสถ์",
       },
       {
         title: 'คริสเตียนเป็นพวกไร้ความรับชอบเอาแต่พึ่งพาพระเจ้าจริงหรอ',
         description:
-          "This is not about revenge. This is about justice. A lot of things can change in twelve years, Admiral. Well, that's certainly good to know. About four years. I got tired of hearing how young I looked.",
+          "คริสเตียนไม่ได้ไร้ความรับผิดชอบ แต่เชื่อว่าต้อง ทำหน้าที่ของตัวเองให้ดีที่สุด พร้อมกับพึ่งพาพระเจ้าในเรื่องที่ควบคุมไม่ได้ พระคัมภีร์สอนให้ ขยัน ซื่อสัตย์ และรับผิดชอบ เช่น  ใครไม่ยอมทำงาน ก็อย่าให้เขากิน (2 เธสะโลนิกา 3:10)  จงทำทุกสิ่งเหมือนทำถวายพระเจ้า (โคโลสี 3:23) คริสเตียนที่แท้จริง ต้องลงมือทำ ไม่ใช่แค่อธิษฐานแล้วรอให้ทุกอย่างเกิดขึ้นเอง ",
       },
     ]}
   />
