--- a/src/pages/contact.astro
+++ b/src/pages/contact.astro
@@ -19,7 +19,7 @@ const metadata = {
   <ContactUs
     id="form"
     title="การเดินทางมายังคริสตจักร"
-    subtitle="ลง BTS ราชเทวี ทางออกประตู X ตึกสภาคริสจักร ชั้น 6 ห้องประชุม X"
+    subtitle="ลง BTS ราชเทวี ทางออกประตู 1 (ผ่านป้ายโรงแรมเอเชีย) ตึกสภาคริสจักร ชั้น 6 ห้องประชุม 2"
     inputs={[
       {
         type: 'text',
