--- a/src/pages/homes/mobile-app.astro
+++ b/src/pages/homes/mobile-app.astro
@@ -63,8 +63,7 @@ const metadata = {
 
     <Fragment slot="subtitle">
       <span class="hidden sm:inline">
-        ใน application คุณจะพบกับบทเรียนผู้เชื่อใหม่ รากฐานชีวิตคริสเตียน คำพยานชีวิต หลักข้อชื่อและอื่นๆ
-      </span>
+        แอพพลิเคชั่น Seed จัดทำโดยองค์กรคริสตจักรเมล็ดพันธุ์ เพื่อรวบรวมคำสอนต่างๆ คำเทศนา คำพยาน บทเฝ้าเดี่ยว ข่าวสารขององค์กร เพื่อความสะดวกของสมาชิกในองค์กร ศึกษาเรื่องราวของพระเจ้า และติดตามข่าวสารต่างๆ ซึ่งสิ่งเหล่านี้ได้รวมไว้ในแอพพลิเคชั่น Seed แล้ว      </span>
       <!-- Download now and embark on a journey to elevate your projects like never before. -->
     </Fragment>
 
@@ -282,7 +281,7 @@ const metadata = {
   <CallToAction
     id="download"
     title="Download our app now!"
-    subtitle="Access a variety of stunning templates, simplify your creative process, and elevate your online presence."
+    subtitle="แอพพลิเคชั่น Seed จัดทำโดยองค์กรคริสตจักรเมล็ดพันธุ์ เพื่อรวบรวมคำสอนต่างๆ คำเทศนา คำพยาน บทเฝ้าเดี่ยว ข่าวสารขององค์กร เพื่อความสะดวกของสมาชิกในองค์กร ศึกษาเรื่องราวของพระเจ้า และติดตามข่าวสารต่างๆ ซึ่งสิ่งเหล่านี้ได้รวมไว้ในแอพพลิเคชั่น Seed แล้ว"
   >
     <div slot="actions" class="flex max-w-sm gap-4">
       <Button variant="link" href={appStoreDownloadLink}>
