--- a/src/pages/homes/give.astro
+++ b/src/pages/homes/give.astro
@@ -19,7 +19,7 @@ const metadata = {
 ---
 
 <Layout metadata={metadata}>
-  <Fragment slot="header">
+  <!-- <Fragment slot="header">
     <Header
       {...headerData}
       actions={[
@@ -36,7 +36,7 @@ const metadata = {
       ]}
       isSticky
     />
-  </Fragment>
+  </Fragment> -->
 
   <!-- Hero2 Widget ******************* -->
 
@@ -60,7 +60,7 @@ const metadata = {
       ชื่อบัญชีเอกมณีและวัธนีและพิชาม
     </Fragment>
   </Hero2>
-  <Note />
+  <Note  quote="Note:" text="ท่านใดที่ยังไม่เข้าใจเรื่องการถวายสิบลดขอให้ QR เลื่อนผ่านหน้าท่านไปก่อน"/>
   <Hero2
     tagline="ถวายทรัพย์คริปโต"
     actions={[
